2010-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Always report "taperflush criteria not met".

2010-05-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Changer.pl: test more configs
	* man/xml-source/amanda.conf.5.xml: point users to
	  amanda-changers(7)
	* perl/Amanda/Changer.pm: support either tpchanger or
	  tapedev in changer defs

2010-05-20  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/progs.m4: always use rpcgen
	* ndmp-src/Makefile.am: always build rpc outputs
	* ndmp-src/ndmp0.h ndmp-src/ndmp0_xdr.c ndmp-src/ndmp2.h
	  ndmp-src/ndmp2_xdr.c ndmp-src/ndmp3.h ndmp-src/ndmp3_xdr.c
	  ndmp-src/ndmp4.h ndmp-src/ndmp4_xdr.c ndmp-src/ndmp9.h
	  ndmp-src/ndmp9_xdr.c: remove from version control (and dist)

2010-05-19  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: don't print to stderr anymore

2010-05-19  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am: use BUILT_SOURCES to build rpcgen products
	  first, since they are not solaris-compatible

2010-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: filter "Server not using user level ..."

2010-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl (inventory): print barcode from unknown state.

2010-05-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Application.swg (default_validate): Use sysread.

2010-05-18  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: don't fail when fsf_after_filemark is
	  required

2010-05-18  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Changer/rait.pm: add debug message when child slot
	  counts differ

2010-05-18  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/net.m4: correct help messages

2010-05-18  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: fix typo

2010-05-17  Dustin J. Mitchell <dustin@zmanda.com>